# systems-algebraic-equations

./: CMakeLists.txt  README.md  main.cpp  matrix.txt  matrix_out.txt  meta_solver_algebrick.hpp  solver_algebrick.hpp
